--- a/vagrant_files/reverse_proxy/Vagrantfile
+++ b/vagrant_files/reverse_proxy/Vagrantfile
@@ -1,1 +1,23 @@
-
+Vagrant.configure(2) do |config|
+  config.vm.box = "ubuntu/xenial64"
+  config.vm.network "private_network", ip: "192.168.10.10/24", virtualbox__intnet: "LAN"
+  config.vm.network "forwarded_port", guest:80, host:8080, auto_correct: true
+  config.vm.synced_folder ".", "/var/www/html"  
+config.vm.provider "virtualbox" do |vb|
+  vb.memory = "512"  
+end
+config.vm.provision "shell", inline: <<-SHELL
+  # Packages vom lokalen Server holen
+  # sudo sed -i -e"1i deb {{config.server}}/apt-mirror/mirror/archive.ubuntu.com/ubuntu xenial main restricted" /etc/apt/sources.list 
+  sudo apt-get update
+  sudo apt-get install libapache2-mod-proxy-html
+  sudo apt-get install libxm12-dev -y
+  sudo a2enmod proxy
+  sudo a2enmod proxy_html
+  sudo a2enmod proxy_http 
+  sudo service apache2 restart
+  sudo adduser yanickegli
+  sudo usermod -aG sudo yanickegli
+  
+SHELL
+end
