--- a/vagrant_files/reverse_proxy/Vagrantfile
+++ b/vagrant_files/reverse_proxy/Vagrantfile
@@ -1,6 +1,6 @@
 Vagrant.configure(2) do |config|
   config.vm.box = "ubuntu/xenial64"
-  config.vm.network "private_network", ip: "10.1.31.16/24", virtualbox__intnet: "LAN"
+  config.vm.network "private_network", ip: "192.168.1.20/24", virtualbox__intnet: "LAN"
   config.vm.network "forwarded_port", guest:80, host:8080, auto_correct: true
   config.vm.synced_folder ".", "/var/www/html"
 config.vm.provider "virtualbox" do |vb|
@@ -16,8 +16,8 @@ config.vm.provision "shell", inline: <<-SHELL
   sudo a2enmod proxy_html
   sudo a2enmod proxy_http
   sudo service apache2 restart
-  sudo adduser yanickegli
-  sudo usermod -aG sudo yanickegli
+  sudo adduser PATLUCHELMUH
+  sudo usermod -aG sudo PATLUCHELMUH
 
 SHELL
 end
