--- a/vagrant_files/reverse_proxy/Vagrantfile
+++ b/vagrant_files/reverse_proxy/Vagrantfile
@@ -14,5 +14,11 @@ Vagrant.configure("2") do |config|
         sudo a2enmod proxy_html
         sudo a2enmod proxy_http
         sudo service apache2 restart
+        sudo apt-get install ufw -y
+        sudo ufw enable
+        sudo ufw deny out to any
+        sudo ufw allow out 22/tcp
+        sudo ufw allow from 10.1.31.16 to any port 22
+        sudo ufw deny 80/tcp
     SHELL
 end
