--- a/vagrant_files/Minecraft/Vagrantfile
+++ b/vagrant_files/Minecraft/Vagrantfile
@@ -1,4 +1,6 @@
 Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/trusty64"
-  config.vm.provider :virtualbox do |vb|
-  vb.customize ["modifyvm", :id, "--memory", "2048", "--cpus", "2"]
+  config.vm.provider "virtualbox" do |vb|
+    vb.memory="2048"
+  end
+end
