--- a/vagrant_files/Minecraft/Vagrantfile
+++ b/vagrant_files/Minecraft/Vagrantfile
@@ -2,5 +2,7 @@ Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/trusty64"
   config.vm.provider "virtualbox" do |vb|
     vb.memory="2048"
+  config.vm.network "forwarded_port", guest: 25565, host: 25565, protocol: "tcp"
+
   end
 end
