--- a/vagrant_files/Minecraft/Vagrantfile
+++ b/vagrant_files/Minecraft/Vagrantfile
@@ -3,6 +3,7 @@ Vagrant.configure("2") do |config|
   config.vm.provider "virtualbox" do |vb|
     vb.memory="2048"
   config.vm.network "forwarded_port", guest: 25565, host: 25565, protocol: "tcp"
+  config.vm.provision :shell, :path => "minecraft_bootstrap"
 
   end
 end
